# macros

./: Cargo.toml  README.md
examples/: 14-1.rs  14-2.rs  15-1.rs  15-2.rs  auto_debug.rs  auto_deref.rs  enum_from.rs  enum_from_darling.rs  my_ready.rs  my_try.rs  my_vec.rs
src/: auto.rs  auto_debug.rs  auto_deref.rs  enum_from.rs  enum_from_darling.rs  lib.rs  main.rs  process_enum_darling.rs
